--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -1,49 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="10dp">
 
     <ImageView
-        android:id="@+id/cover"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:id="@+id/logo"
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
 
     <TextView
         android:id="@+id/title"
-        android:layout_below="@id/cover"
+        android:layout_below="@id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Barca is the best"
+        tools:text="Goal"
+        android:gravity="center"
         android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimaryText"/>
+        android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/source"
-        android:layout_below="@id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="BBC News"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimaryText"/>
 
-    <TextView
-        android:id="@+id/time"
-        android:layout_below="@id/title"
-        android:layout_alignParentEnd="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="1 min ago"
-        android:textColor="@color/colorPrimaryText"/>
-
-    <TextView
-        android:id="@+id/desc"
-        android:layout_below="@id/source"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimaryText"
-        tools:text="EFL chairman Rick Parry says the league is deeply frustrated after plans to allow some fans to return to matches were halted."/>
 
 </RelativeLayout>
