--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/navigation_archive"
         android:icon="@drawable/ic_archive"
-        android:title="@string/menu_arch"/>
+        android:title="@string/menu_archive"/>
 
 </menu>
