--- a/app/src/main/res/layout/standing_item.xml
+++ b/app/src/main/res/layout/standing_item.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/colorPrimaryDark"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
 
     <TextView
         android:id="@+id/rank"
@@ -13,6 +15,8 @@
         tools:text="1"
         android:gravity="center"
         android:textColor="@color/colorAccent"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
         />
 
     <TextView
@@ -38,6 +42,7 @@
         android:textColor="@color/colorAccent"
         android:layout_toStartOf="@id/win"
         android:layout_alignBottom="@id/win"
+        android:layout_marginEnd="5dp"
         />
 
     <TextView
@@ -49,6 +54,7 @@
         android:textColor="@color/colorAccent"
         android:layout_toStartOf="@id/draw"
         android:layout_alignBottom="@id/draw"
+        android:layout_marginEnd="5dp"
         />
 
     <TextView
@@ -60,6 +66,7 @@
         android:textColor="@color/colorAccent"
         android:layout_toStartOf="@id/loss"
         android:layout_alignBottom="@id/loss"
+        android:layout_marginEnd="5dp"
         />
 
     <TextView
@@ -71,6 +78,7 @@
         android:textColor="@color/colorAccent"
         android:layout_toStartOf="@id/diff"
         android:layout_alignBottom="@id/diff"
+        android:layout_marginEnd="5dp"
         />
 
     <TextView
@@ -82,6 +90,7 @@
         android:textColor="@color/colorAccent"
         android:layout_toStartOf="@id/points"
         android:layout_alignBottom="@id/points"
+        android:layout_marginEnd="5dp"
         />
 
     <TextView
@@ -93,6 +102,7 @@
         android:textColor="@color/colorAccent"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
+        android:layout_marginEnd="5dp"
         />
 
 </RelativeLayout>
