--- a/app/src/main/res/layout/standing_item.xml
+++ b/app/src/main/res/layout/standing_item.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         tools:text="1"
         android:gravity="center"
+        android:layout_centerVertical="true"
         android:textColor="@color/colorAccent"
         android:layout_marginEnd="5dp"
         android:layout_marginStart="5dp"
@@ -22,15 +23,13 @@
     <TextView
         android:id="@+id/name"
         android:layout_toEndOf="@id/rank"
-        android:layout_width="wrap_content"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         tools:text="Liverpool FC"
         android:textColor="@color/colorAccent"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:maxWidth="200dp"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
+        android:layout_centerVertical="true"
         />
 
     <TextView
